<resources>
    <string name="app_name">ZdravaIshranaApp</string>
    <string name="tab_text_1">Recepti</string>
    <string name="tab_text_2">Proizvodi</string>
    <string name="tab_text_3">Prodavnice</string>
    <string name="action_settings">Settings</string>

    <!-- card view stringovi -->
    <string name="image_view_content_description">Slika proizvoda</string>
    <string name="recept_favourite_content_description">Slika da li je omiljeni</string>
    <string name="card_view_proteini">proteini</string>
    <string name="card_view_ugljeni_hidrati">ugljeni hidrati</string>
    <string name="card_view_masti">masti</string>

    <!-- location toast -->
    <string name="location_toast">Dozvola odbijena!Morate omoguciti dozvolu!</string>

    <!-- car item -->
    <string name="item">Item</string>
    <string name="item_image_content_description">Ikonica</string>

    <!-- natpisi za FavSopClanciActivity.java -->
    <string name="label_favorites">Omiljeni recepti</string>
    <string name="label_shoping">Shoping</string>
    <string name="label_articles">Articles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
